# oauth-client-helper

./: .gitignore  Dockerfile  README.md  build-image.yaml  docker-compose.yaml  pypkg_README.md  pypkg_README.rst  pyproject.toml  setup.py
docker/: entrypoint.sh
src/: README.rst  setup.py
src/oauth_client/: __init__.py  app.py  forms.py  objects.py  routes.py  settings.py  setup.py  wsgi.py
src/oauth_client/config/: __init__.py  default.py
src/oauth_client/objects/: __init__.py  api_client.py  token_store.py
src/oauth_client/templates/: add_client.j2  client_detail.j2  home.j2  success.j2
