[tool.poetry]
name = "oauth_client"
packages = [
    { include = 'oauth_client', from='src'},
]
version = "0.2.1"
description = ""
authors = ["Dedric Friedly <dedric.friedly@inspiredev-llc.com>"]
repository = 'https://github.com/dedfriedly-inspirdev/oauth-client-helper'
license = 'Apache-2.0'
readme = 'pypkg_README.md'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
keywords = [
    'OAuth2',
    'Helper',
    'Flask',
    'OAuth',
    'Redirector'
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
flask = "^1.1.2"
redis = "^4.5.3"
pyopenssl = "^19.1.0"
flask-talisman = "^0.7.0"
dynaconf = {extras = ["all"], version = "^2.2.3"}
filelock = "^3.0.12"
flask-wtf = "^0.14.3"
flask-bootstrap4 = "^4.0.2"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
dephell = "^0.8.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
